@@ -1,3 +1,8 @@
+2015-08-04  Gavin Smith  <gavinsmith0123@gmail.com>
+
+	* info/session.c (BEFORE_MENUS): New symbol.  Use it instead of 
+	literal value.  Remove some commented-out code.
+
 2015-08-03  Gavin Smith  <gavinsmith0123@gmail.com>
 
 	* doc/texinfo.texi (Short Sample Texinfo File): Remove some 
